--- a/src/app/features/product/_components/product-list/product-list.component.html
+++ b/src/app/features/product/_components/product-list/product-list.component.html
@@ -8,8 +8,8 @@
 
     <div class="categories">
       <!-- ✅ Display First 10 Categories -->
-      <div *ngFor="let category of categories.slice(0, 10); let i = index" class="category-item"
-        [ngClass]="{ selected: selectedCategory === i }" (click)="selectCategory(i, category.id)">
+      <div *ngFor="let category of categories().slice(0, 10); let i = index" class="category-item"
+        [ngClass]="{ selected: selectedCategory() === i }" (click)="selectCategory(i, category.id)">
         <span>{{ category.name }}</span>
       </div>
 
@@ -19,7 +19,36 @@
       </div>
     </div>
 
-    <app-product [productsList]="productsList()"></app-product>
+
+    <div class="product-container">
+      <!-- Skeleton Loader -->
+      @if (isLoading()) {
+      @for (_ of [1, 2, 3, 4, 5]; track _) {
+      <div class="product-card skeleton">
+        <div class="wishlist-icon">
+          <div class="skeleton-box" style="width: 20px; height: 20px; border-radius: 50%;"></div>
+        </div>
+        <div class="product-image">
+          <div class="skeleton-box" style="width: 100%; height: 150px;"></div>
+        </div>
+        <div class="product-details">
+          <div class="product-header">
+            <div class="skeleton-box" style="width: 60%; height: 20px;"></div>
+            <div class="skeleton-box" style="width: 30%; height: 20px;"></div>
+          </div>
+          <div class="skeleton-box" style="width: 100%; height: 40px;"></div>
+          <div class="product-rating">
+            <div class="skeleton-box" style="width: 80px; height: 15px;"></div>
+          </div>
+          <div class="skeleton-box add-to-cart-skeleton"></div>
+        </div>
+      </div>
+      }
+      }
+
+      <app-product *ngIf="!isLoading()" [productsList]="productsList()"></app-product>
+    </div>
+
   </div>
 
   <!-- Week Top Sellers Section -->
