modified wishlist & header & dashboard designs with improved performance

--- a/src/app/features/auth/_components/login/login.component.html
+++ b/src/app/features/auth/_components/login/login.component.html
@@ -7,116 +7,13 @@
   <!-- Right Content Section -->
   <ng-container *ngIf="!isRegistering(); else signUpForm">
     <div class="right-section">
-      <h2 class="title">Let's Sign You In</h2>
-      <p class="subtitle">Welcome</p>
-
-      <form *ngIf="activeLoginMethod === 'otp'" [formGroup]="loginOtpForm" (ngSubmit)="onSubmitOtp()">
-        <!-- Mobile Number Field -->
-        <div class="form-group">
-          <label for="mobileNumber">Mobile Number</label>
-          <input type="text" id="mobileNumber" class="form-control" placeholder="Enter your mobile number"
-            formControlName="mobileNumber" (input)="onMobileNumberInput($event)" maxlength="10"
-            (keypress)="allowOnlyNumbers($event)" />
-          <small *ngIf="loginOtpForm.get('mobileNumber')?.invalid && loginOtpForm.get('mobileNumber')?.touched"
-            class="validation-message">Enter a valid 10-digit mobile number.</small>
-
-          <p *ngIf="isResendBlocked" class="validation-message">
-            You've reached the maximum OTP resend attempts. Please wait {{ resendCooldown }} seconds before trying
-            again.
-          </p>
-
-          <!-- OTP Action Links -->
-          <p class="info-text">
-            <ng-container *ngIf="isOtpSent; else sendOtpTemplate">
-              <ng-container *ngIf="isOtpResendEnabled; else timerTemplate">
-                <a class="resend-otp-link" (click)="resendOtp($event)" [class.disabled]="isLoading">
-                  <span *ngIf="!isLoading">Resend OTP</span>
-                  <span *ngIf="isLoading" class="loader"></span>
-                </a>
-              </ng-container>
-              <ng-template #timerTemplate>
-                <span class="otp-timer">Resend Otp in {{ otpCooldown }}s</span>
-              </ng-template>
-            </ng-container>
-
-            <ng-template #sendOtpTemplate>
-              <a class="send-otp-link" (click)="sendOtp($event)" [class.disabled]="isLoading">
-                <span *ngIf="!isLoading">Send OTP</span>
-                <span *ngIf="isLoading" class="loader"></span>
-              </a>
-            </ng-template>
-          </p>
-        </div>
-
-        <!-- OTP Input Field -->
-        <div class="form-group" *ngIf="isOtpSent">
-          <label for="otp">OTP</label>
-          <input type="text" id="otp" class="form-control" placeholder="Enter OTP" formControlName="otp"
-            maxlength="5" />
-          <small *ngIf="loginOtpForm.get('otp')?.invalid && loginOtpForm.get('otp')?.touched"
-            class="validation-message">OTP must be 5 characters long.</small>
-        </div>
-
-        <!-- Submit Button -->
-        <button type="submit" class="btn-signin" [disabled]="loginOtpForm.invalid">
-          <span *ngIf="!isSignInLoading">Sign In</span>
-          <span *ngIf="isSignInLoading" class="signIn-loader"></span>
-        </button>
-
-        <!-- Register Link -->
-        <p class="register-text">
-          Don't have an account? <a (click)="onRegister()" class="register-link">Register</a>
-        </p>
-      </form>
-
-      <!-- Login with Password Form -->
-      <form *ngIf="activeLoginMethod === 'password'" [formGroup]="loginPasswordForm" (ngSubmit)="onSubmitPassword()">
-        <div class="form-group">
-          <label for="emailOrMobile">Email or Mobile Number</label>
-          <input type="text" id="emailOrMobile" class="form-control" placeholder="Enter your email or mobile number"
-            formControlName="emailOrMobile" />
-          <span class="validation-message"
-            *ngIf="loginPasswordForm.get('emailOrMobile')?.invalid && loginPasswordForm.get('emailOrMobile')?.touched">
-            Email or Mobile Number is required.
-          </span>
-        </div>
-
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" class="form-control" placeholder="Enter your password"
-            formControlName="password" />
-          <span class="validation-message"
-            *ngIf="loginPasswordForm.get('password')?.invalid && loginPasswordForm.get('password')?.touched">
-            Password is required.
-          </span>
-        </div>
-
-        <div class="form-group remember-me">
-          <input type="checkbox" id="rememberMe" formControlName="rememberMe" />
-          <label for="rememberMe">Remember Me</label>
-        </div>
-
-
-        <p class="forgot-password">
-          <a href="#" (click)="onForgotPassword()">Forgot Password?</a>
-        </p>
-
-        <button type="submit" class="btn-signin" [disabled]="loginPasswordForm.invalid">
-          <span *ngIf="!isSignInLoading">Sign In</span>
-          <span *ngIf="isSignInLoading" class="signIn-loader"></span>
-        </button>
-
-        <!-- Register Link -->
-        <p class="register-text">
-          Don't have an account? <a (click)="onRegister()" class="register-link">Register</a>
-        </p>
-      </form>
+      <app-signin [activeLoginMethod]="activeLoginMethod" (isRegisterClicked)="showRegisterPage($event)" (closeLoginDialog)="closeDialog($event)"></app-signin>
     </div>
   </ng-container>
 
   <ng-template #signUpForm>
     <div class="right-section">
-      <app-sign-up></app-sign-up>
+      <app-sign-up (showLoginPage)="showLoginPage($event)"></app-sign-up>
     </div>
   </ng-template>
 </div>
