--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -320,10 +320,10 @@
   right: 80px;
   /* Move away from the right edge to avoid overlap */
   background-color: #fbc02d;
-  /* Theme yellow for badge */
-  color: #333;
+  color: #682f12;
+
   /* Text color inside badge */
-  font-size: 10px;
+  font-size: 8px;
   font-weight: bold;
   padding: 3px 6px;
   /* Padding for badge */
