--- a/src/app/shared/components/menu-dropdown/menu-dropdown.component.scss
+++ b/src/app/shared/components/menu-dropdown/menu-dropdown.component.scss
@@ -1,6 +1,6 @@
 .menu-dropdown {
   position: relative;
-  display: inline-block;
+  // display: inline-block;
 
   .menu-list {
     list-style: none;
