--- a/src/app/features/product/_components/product-list/product-list.component.html
+++ b/src/app/features/product/_components/product-list/product-list.component.html
@@ -46,7 +46,7 @@
       }
       }
 
-      <app-product *ngIf="!isLoading()" [productsList]="productsList()"></app-product>
+      <app-product *ngIf="!isLoading()" [productsList]="productsList()" (wishlistUpdated)="updatedWishlistCount($event)"></app-product>
     </div>
 
   </div>
