--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -77,7 +77,7 @@
     <div class="action-item" (click)="goToWishlistPage()">
       <img class="wishlist-image" src="../../../../assets/images/Wishlist.png" width="20" height="20" />
       <span>Wishlist</span>
-      <div class="wishlist-badge" *ngIf="wishlistCount() > 0">{{ wishlistCount() }}</div>
+      <div class="wishlist-badge" *ngIf="wCount > 0">{{ wCount }}</div>
     </div>
     <div class="action-item" (click)="goToCartPage()">
       <img class="cart-image" src="../../../../assets/images/cart-48.png" width="20" height="20" />
@@ -90,6 +90,6 @@
     (closeDialog)="closeLoginDialog(true)"></app-dialog>
 
   <ng-template #loginTemplate>
-    <app-login [activeLoginMethod]="selectedLoginMethod" (closeLoginDialog)="closeLoginDialog($event)"></app-login>
+    <app-login [activeLoginMethod]="selectedLoginMethod" (closeLoginDialog)="closeLoginDialog($event)" (isLoginSuccess)="refreshHeaderState($event)"></app-login>
   </ng-template>
 </header>
