--- a/src/app/features/product/_components/product/product.component.html
+++ b/src/app/features/product/_components/product/product.component.html
@@ -14,7 +14,7 @@
       <!-- ✅ Wishlist Icon -->
       <div class="wishlist-icon">
         <span (click)="addToWishlist(product)">
-          <span *ngIf="isInWishlist(product.id!); else notInWishlist">❤️</span>
+          <span *ngIf="product.id! | isInWishlist; else notInWishlist">❤️</span>
           <ng-template #notInWishlist>🤍</ng-template>
         </span>
       </div>
@@ -39,11 +39,18 @@
 
         <div class="product-price">₹{{ product.price }}</div>
 
-        <div class="product-rating">
-          ⭐⭐⭐⭐⭐ ({{ product.rating }})
+        <div class="rating-cart-wrapper">
+          <div class="product-rating">
+            ⭐⭐⭐⭐⭐ ({{ product.rating }})
+          </div>
+
+          <div class="add-to-cart-wrapper" (click)="addToCart(product.id!)">
+            <span class="add-to-cart-icon">🛒</span>
+            <span class="tooltip">Add to Cart</span>
+          </div>
         </div>
 
-        <button class="add-to-cart" (click)="addToCart(product.id!)">Add to Cart</button>
+
       </div>
     </div>
     }
