--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -44,21 +44,27 @@
     <button class="search-button">
       <img src="../../../../assets/images/search.png" width="20" height="20" alt="Search Icon" />
     </button>
+
+    <!-- ⏳ Loader spinner next to input -->
+    <div class="loader-spinner" *ngIf="isLoading()" aria-label="Loading..."></div>
+
+    <!-- ✅ Live Search Suggestions -->
+    <div class="search-suggestions" *ngIf="showSuggestions() && (products$ | async) ?? []!.length > 0;">
+      <ul>
+        <li *ngFor="let product of products$ | async; let i = index" (click)="goToProductDetails(product)"
+          [ngClass]="{ 'highlighted': i === selectedIndex() }">
+          <img [src]="getImagePath(product.images![0].image)" alt="{{ product.name }}" class="product-img"
+            (error)="onImageError($event)" />
+          <div class="product-info">
+            <span class="product-name">{{ product.name }}</span>
+            <span class="product-price">₹{{ product.price }}</span>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
 
-  <!-- ✅ Live Search Suggestions -->
-  <div class="search-suggestions" *ngIf="showSuggestions() && (products$ | async) ?? []!.length > 0;">
-    <ul>
-      <li *ngFor="let product of products$ | async; let i = index" (click)="goToProductDetails(product)"
-        [ngClass]="{ 'highlighted': i === selectedIndex() }">
-        <img [src]="getImagePath(product.images![0].image)" alt="{{ product.name }}" class="product-img" (error)="onImageError($event)" />
-        <div class="product-info">
-          <span class="product-name">{{ product.name }}</span>
-          <span class="product-price">₹{{ product.price }}</span>
-        </div>
-      </li>
-    </ul>
-  </div>
+
 
   <div class="header-actions">
     <div class="account-wrapper" (click)="toggleMenu()" aria-haspopup="true">
@@ -77,7 +83,7 @@
     <div class="action-item" (click)="goToWishlistPage()">
       <img class="wishlist-image" src="../../../../assets/images/Wishlist.png" width="20" height="20" />
       <span>Wishlist</span>
-      <div class="wishlist-badge" *ngIf="wCount > 0">{{ wCount }}</div>
+      <div class="wishlist-badge" *ngIf="wCount() > 0">{{ wCount() }}</div>
     </div>
     <div class="action-item" (click)="goToCartPage()">
       <img class="cart-image" src="../../../../assets/images/cart-48.png" width="20" height="20" />
@@ -90,6 +96,7 @@
     (closeDialog)="closeLoginDialog(true)"></app-dialog>
 
   <ng-template #loginTemplate>
-    <app-login [activeLoginMethod]="selectedLoginMethod" (closeLoginDialog)="closeLoginDialog($event)" (isLoginSuccess)="refreshHeaderState($event)"></app-login>
+    <app-login [activeLoginMethod]="selectedLoginMethod" (closeLoginDialog)="closeLoginDialog($event)"
+      (isLoginSuccess)="refreshHeaderState($event)"></app-login>
   </ng-template>
 </header>
