--- a/src/app/features/cart/_components/wishlist/wishlist.component.html
+++ b/src/app/features/cart/_components/wishlist/wishlist.component.html
@@ -7,7 +7,7 @@
 
 
   <ng-container *ngIf="!(wishlistItems().length > 0)">
-    <div>
+    <div (click)="goToHomePage()" class="d-flex justify-content-center">
       <img style="cursor: pointer;" src="../../../../../assets/images/empty-wishlist.webp" width="auto" height="400px" />
     </div>
   </ng-container>
