--- a/src/app/features/product/_components/view-product/view-product.component.html
+++ b/src/app/features/product/_components/view-product/view-product.component.html
@@ -1,12 +1,12 @@
 <div class="product-container" *ngIf="!isLoading(); else loading">
   <!-- ✅ Product Image -->
   <div class="product-image">
-    <img [src]="getImagePath(product()?.images![0].image)" [alt]="product()?.name" (error)="onImageError($event)" />
+    <img [src]="getImagePath(product()?.images![imageIndex].image)" [alt]="product()?.name" (error)="onImageError($event)" />
 
     <!-- ✅ Product Thumbnail Images -->
     <div class="thumbnail-container" *ngIf="product()?.images!.length > 1">
-      <img *ngFor="let image of product()?.images" [src]="getImagePath(image.image)" [alt]="product()?.name"
-        (error)="onImageError($event)" />
+      <img *ngFor="let image of product()?.images; let i = index" [src]="getImagePath(image.image)" [alt]="product()?.name"
+        (error)="onImageError($event)" (click)="showClickedSpecificImage(i)" />
     </div>
   </div>
 
@@ -28,7 +28,7 @@
       <div class="product-quantity">
         <button class="quantity-btn" (click)="decreaseQuantity()">-</button>
         <label>{{ quantity() }}</label>
-        <button class="quantity-btn" (click)="increaseQuantity()">+</button>
+        <button class="quantity-btn" [disabled]="quantity() === product()?.maxQuantity" (click)="increaseQuantity()">+</button>
       </div>
 
       <div class="stock-info">
